# we816-mark2

./: .gitignore  BVSWorkspaceState.json  Bay38910.asm  Bdbasic816.asm  Bdefinitions.asm  Bscreencmds.asm  README.md  fROMBIOS816.LST  fiROMBIOS816.asm  fiROMBIOS816.hex  fiROMBIOS816.map
BASIC/: DBASIC816.lst  messages.asm  superstartrek.bas.txt
GALS/: CM311866  GAL-U12.PLD  GAL-U12.abs  GAL-U12.jed  GAL-U12.sim  GAL-U13.PLD  GAL-U13.abs  GAL-U13.jed  GAL-U13.sim  GAL-U14.PLD  GAL-U14.abs  GAL-U14.jed  GAL-U14.sim  GAL-U15.PLD  GAL-U16.PLD  GAL-U17.PLD  GAL-U6.PLD  GAL-U6.abs  GAL-U6.jed  GAL-U6.sim
Hardware/: file5FFCADA1.kicad_sch  file5FFCBF10.kicad_sch  file5FFCD08B.kicad_sch  file5FFCE1F7.kicad_sch  file60340596.kicad_sch  file60341279.kicad_sch  fp-info-cache  we816mark2.csv  we816mark2.dsn  we816mark2.kicad_pcb  we816mark2.kicad_prl  we816mark2.kicad_pro  we816mark2.kicad_sch  we816mark2.rules  we816mark2.ses  we816mark2.xml  ~we816mark2.kicad_sch.lck
Support/: Enhanced_65816_BASIC_reference_manual.docx  WE816case.scad  WE816case_top.stl  ~$hanced_65816_BASIC_reference_manual.docx
basic/: dbasic816.asm  dbasic816.hex  dbasic816.lst  dbasic816.map  dbasic816.out  dbasic816.s19  definitions.asm  diskcmds.asm  iovect.asm  makefile  rom816.cfg  rtc.asm  screencmds.asm  tokens.asm
pico/: CMakeLists.txt  README.md  abus.c  board_config.h  buffers.c  buffers.h  colors.c  colors.h  config.c  device_regs.c  device_regs.h  main.c  render.c  render_hires.c  render_lores.c  render_text.c  vga.c
pico/textfont/: iie_us_enhanced.c  textfont.c  textfont.h
(+63 files in other folders)
